# csprofileeditor

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: main.yml
cmake/: install.cmake
include/cslibs/: Db.h  DefsFile.h  Entity.h  except.h
include/cslibs/disc/: DiscDb.h
include/cslibs/effect/: EffectDb.h
include/cslibs/gel/: Gel.h  GelDb.h
include/cslibs/gobo/: GoboDb.h
include/csprofile/: ColorTable.h  Library.h  Personality.h  except.h  logging.h
include/csprofile/parameter/: Media.h  Parameter.h  Range.h
meta/linux/: csprofileeditor.desktop
meta/macos/: Info.plist
resources/: 3rd-party.md  CMakeLists.txt  app-icon.icns  resources.qrc
src/: CMakeLists.txt  config.h.in
src/cslibs/: CMakeLists.txt  Db.cpp  DefsFile.cpp
src/cslibs/disc/: CMakeLists.txt  DiscDb.cpp
src/cslibs/effect/: CMakeLists.txt  EffectDb.cpp
src/cslibs/gel/: CMakeLists.txt  GelDb.cpp
src/cslibs/gobo/: CMakeLists.txt  GoboDb.cpp
src/csprofile/: CMakeLists.txt  ColorTable.cpp  Library.cpp  Personality.cpp  logging.cpp
src/csprofile/parameter/: CMakeLists.txt  Media.cpp  Parameter.cpp  Range.cpp
src/csprofileeditor/: AboutDialog.cpp  AboutDialog.h  AllowedNamesItemDelegate.cpp  AllowedNamesItemDelegate.h  CMakeLists.txt  CsLibUpdater.cpp  CsLibUpdater.h  EtcCsPersEditBridge.cpp  EtcCsPersEditBridge.h  ExportDialog.cpp  ExportDialog.h  MainWindow.cpp  MainWindow.h  MediaSelectorDialog.cpp  MediaSelectorDialog.h  ParameterTableModel.cpp  ParameterTableModel.h  ParameterTypeItemDelegate.cpp  ParameterTypeItemDelegate.h  PersonalityEditDialog.cpp  PersonalityEditDialog.h  PersonalityTableModel.cpp  PersonalityTableModel.h  PushButtonItemDelegate.cpp  PushButtonItemDelegate.h  RangesEditDialog.cpp  RangesEditDialog.h  RangesTableModel.cpp  RangesTableModel.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  util.h
test/: CMakeLists.txt
test/cslibs/: CMakeLists.txt  DefsFileTest.cpp  DiscDbTest.cpp  EffectDbTest.cpp  GelDbTest.cpp  GoboDbTest.cpp
test/csprofile/: CMakeLists.txt  LibraryTest.cpp  ParameterTest.cpp  PersonalityTest.cpp  RangeTest.cpp
